--- a/templates/login.html
+++ b/templates/login.html
@@ -7,14 +7,17 @@
     <h1 class="display-4">Login</h1>
     <hr>
     {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }}" role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+    {% if messages %}
+    {% for category, message in messages %}
+    {% if category == 'success' %}
+    <div class="alert alert-success" role="alert">
+        {{ message }}
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
     {% endwith %}
+
     <form action="{{ url_for('login') }}" method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
