--- a/templates/add_resource.html
+++ b/templates/add_resource.html
@@ -38,6 +38,11 @@
                         <option value="Electronics">Electronics</option>
                     </select>
                 </div>
+
+                <div class="mb-3">
+                    <label for="location" class="form-label"><strong>Location:</strong></label>
+                    <input type="text" class="form-control" id="location" name="location" placeholder="Enter the location" required>
+                </div>
             
                 <div class="mb-3">
                     <label for="availability" class="form-label"><strong>Availability:</strong></label>
@@ -53,7 +58,6 @@
                     <button type="submit" class="btn btn-primary">Add Resource</button>
                 </div>
             </form>
-            
         </div>
     </div>
 </div>
