--- a/templates/register.html
+++ b/templates/register.html
@@ -29,6 +29,10 @@
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
         <div class="mb-3">
+            <label for="confirm_password" class="form-label">Confirm Password:</label>
+            <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+        </div>
+        <div class="mb-3">
             <label for="location" class="form-label">Location:</label>
             <input type="text" class="form-control" id="location" name="location" required>
         </div>
